[package]
name = "Appender"
version = "1.0.0"
authors = ["834772509 <834772509@qq.com>"]
edition = "2018"

[build-dependencies]
embed-resource = "1.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
lazy_static = "1.4.0"
serde = {version="1.0.126", features=["derive"]}
bincode = "1.3.3"
miniz_oxide = "0.4.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
